# dotfiles-mac

./: .macos  .zshrc  Brewfile  README.md  fresh.sh
brew/: install.sh
git/: gitconfig  gitconfig.symlink
installers/: bootstrap.sh  dot  install.sh
mackup/: mackup.cfg.symlink
macos/: settings
py/: install.sh  pyproject.toml
zsh/: aliases  config  funcs  named-dirs  p10k.sh  p10k.zsh  plugins  plugins.zwc  powerlevel9k  spaceship  zshrc  zshrc.symlink
zsh/funcs.d/: ibit.zsh  rdi-comdata.zsh  rdi-cost.zsh  rdi-dt.zsh  rdi-merge.zsh  rdi-rerun.zsh  rdi-rev.zsh
